# chatql-mcp

./: .env.backup  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __version__.py  config.py  database_manager.py  env.example  language_processor.py  pyproject.toml  requirements.txt  server.py  setup.py  version_manager.py
